syntax = "proto3";

package jobworkerp.data;

import "jobworkerp/data/common.proto";
import "jobworkerp/data/runner.proto";
import "jobworkerp/data/worker.proto";

// # Tool Specs
// Metadata that describes tool capabilities and interface for clients
// Represents either a runner or worker as a tool
message ToolSpecs {
  // # Tool ID
  // Unique identifier for the tool
  oneof tool_id {
    jobworkerp.data.RunnerId runner_id = 1;
    jobworkerp.data.WorkerId worker_id = 2;
  }
  // # Tool Name
  // Unique identifier for the tool (e.g. "command", "image-processor")
  string name = 3;
  // # Tool Description
  // Human-readable explanation of what the tool does
  string description = 4;
  // # Tool Input Definition
  // JSON schema defining the tool's input parameters
  ToolInputSchema input_schema = 5;
  // # Result Output Definition
  // JSON schema defining the structure of job execution results
  optional string result_output_schema = 6;

  // # Stream Output Flag
  // When true, the tool supports streaming output mode
  // Enables JobService/EnqueueForStream and JobResultService/ListenStream
  // If not specified, the tool should support both streaming and non-streaming modes
  jobworkerp.data.StreamingOutputType output_type = 7;
}

message ToolInputSchema {
  // # Tool Settings Definition
  // JSON schema for tool setting parameters
  // If empty, the tool requires no settings
  // (Always empty when this spec is for a worker)
  optional string settings = 1;
  // # Job Arguments Definition
  // JSON schema defining the parameters required for job execution
  string arguments = 2;
}
